--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
           <span>I</span></a
         >
       </div>
+      
       <div class="window" id="window">
         <div class="popup">
           <section class="bg"></section>
@@ -107,7 +108,7 @@
                   See Live
                   <img
                     class="icon"
-                    src="./images/live-icon.svg"
+                    src="../images/live-icon.svg"
                     alt="Live Icon"
                   />
                 </div>
@@ -117,7 +118,7 @@
                   See Source
                   <img
                     class="icon"
-                    src="./images/git-icon.svg"
+                    src="../images/git-icon.svg"
                     alt=" source-image"
                   />
                 </div>
@@ -168,7 +169,23 @@
         </div>
 
         <section class="header-info">
-          <h2 class="intro">Hey, I'm Momanyi<br />Glad to See you!</h2>
+          <h2 class="intro">Hey, I'm
+             <div class="container">
+            <svg viewBox="0 0 960 300">
+              <symbol id="s-text">
+                <text text-anchor="middle" x="50%" y="80%">Momanyi</text>
+              </symbol>
+          
+              <g class = "g-ants">
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+                <use xlink:href="#s-text" class="text-copy"></use>
+              </g>
+            </svg>
+          </div>
+            <br />Glad to See you!</h2>
           <p class="about">
             I’m a software developer! I can help you build a product , feature
             or website Look through some of my work and experience! If you like
@@ -179,46 +196,46 @@
             <h4 class="social-media-title">Let's Connect</h4>
             <ul class="social-media-content">
               <li>
-                <a href="#">
+                <a href="https://twitter.com/moseshassany" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/twitter.png"
+                    src="../images/twitter.png"
                     alt="Twitter Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://linkedin.com/in/momanyi-hassan-32a489180" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/linkedin.png"
+                    src="../images/linkedin.png"
                     alt="LinkedIn Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://medium.com/@momanyihassan" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/media.png"
+                    src="../images/media.png"
                     alt="Media Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://github.com/fullstop125" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/github.png"
+                    src="../images/github.png"
                     alt="Github Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://angel.co/u/hassan-momanyi" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/victory.png"
+                    src="../images/victory.png"
                     alt="Victory Icon"
                   />
                 </a>
@@ -247,46 +264,46 @@
             <h5 class="social-media-title">Let's Connect</h5>
             <ul class="social-media-content">
               <li>
-                <a href="#">
+                <a href="https://twitter.com/moseshassany" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/twitter.png"
+                    src="../images/twitter.png"
                     alt="Twitter Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://linkedin.com/in/momanyi-hassan-32a489180" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/linkedin.png"
+                    src="../images/linkedin.png"
                     alt="LinkedIn Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://medium.com/@momanyihassan" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/media.png"
+                    src="../images/media.png"
                     alt="Media Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://github.com/fullstop125" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/github.png"
+                    src="../images/github.png"
                     alt="Github Icon"
                   />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://angel.co/u/hassan-momanyi" target="_blank">
                   <img
                     class="social-media-icons"
-                    src="./images/victory.png"
+                    src="../images/victory.png"
                     alt="Victory Icon"
                   />
                 </a>
@@ -294,9 +311,9 @@
             </ul>
             <div class="btn-container">
               <button
-                onclick="location.href= 'https://drive.google.com/file/d/1s5E3axBAA_pQnh1pFBc_ffdewD4ZFhb9/view?usp=sharing'"
-                type="submit"
-                class="view-btn"
+                onclick="location.href= 'https://drive.google.com/file/d/1s5E3axBAA_pQnh1pFBc_ffdewD4ZFhb9/view?usp=sharing'" 
+                type="submit" 
+                class="view-btn" 
               >
                 Get my resume
               </button>
@@ -307,30 +324,30 @@
         <div class="skills-section">
           <div class="skill-label-container">
             <h3 class="label">languages</h3>
-            <img src="./images/arrow-down.svg" alt="arrow-down-icon" />
+            <img src="../images/arrow-down.svg" alt="arrow-down-icon" />
           </div>
           <ul class="skill-list">
             <li>
-              <img src="./images/Ellipse-html.svg" alt="html-logo" />
+              <img src="../images/Ellipse-html.svg" alt="html-logo" />
               <span>HTML</span>
             </li>
             <li>
-              <img src="./images/Ellipse-css.svg" alt="css-logo" />
+              <img src="../images/Ellipse-css.svg" alt="css-logo" />
               <span>CSS</span>
             </li>
             <li>
-              <img src="./images/Ellipse-js.svg" alt="javascript-logo" />
+              <img src="../images/Ellipse-js.svg" alt="javascript-logo" />
               <span>JavaScript</span>
             </li>
           </ul>
           <div class="skill-label-container">
             <p class="label">frameworks</p>
-            <img src="./images/arrow-right.svg" alt="arrowright-icon" />
+            <img src="../images/arrow-right.svg" alt="arrowright-icon" />
           </div>
           <ul class="skill-list"></ul>
           <div class="skill-label-container">
             <p class="label">skills</p>
-            <img src="./images/arrow-right.svg" alt="arrowright-icon" />
+            <img src="../images/arrow-right.svg" alt="arrowright-icon" />
           </div>
           <ul class="skill-list"></ul>
         </div>
@@ -390,5 +407,6 @@
         </div>
       </section>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
