update about section

--- a/index.html
+++ b/index.html
@@ -187,10 +187,7 @@
           </div>
             <br />Glad to See you!</h2>
           <p class="about">
-            I’m a software developer! I can help you build a product , feature
-            or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don’t hestiate to
-            contact me.
+            I am a versatile and experienced software developer with a passion for delivering innovative solutions to my clients. With a deep understanding of technologies like React, Ruby on Rails, Python, Big Data, and 2D & 3D media and entertainment, I am equipped to tackle a wide range of projects and bring ideas to life with precision and creativity. <br><br> If you're looking for a highly skilled and innovative software developer to bring your vision to life, don't hesitate to reach out.
           </p>
           <section class="social-media-container">
             <h4 class="social-media-title">Let's Connect</h4>
@@ -254,10 +251,7 @@
           </h2>
 
           <p class="about">
-            I'm a software developer! I can help you build a product , feature
-            or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don't hestiate to
-            contact me.
+            My commitment to staying up-to-date with the latest industry developments, as well as my expertise in fields like cyber security, makes me a valuable asset to any team. If you're looking for a dedicated and knowledgeable software developer, I would be honored to put my skills to work for you.
           </p>
 
           <div class="social-media-container-bottom">
