fix local storage

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <textarea
               class="comment"
               id="comment"
-              name="comments"
+              name="comment"
               placeholder="Write your message here"
               required
               maxlength="500"
