--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EW79TJT202"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EW79TJT202');
+</script>
   <meta charset="UTF-8" />
   <meta name="description" content="Hassan's Full-stack web development portfolio ." />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
